# mptt-dropbox

./: README.md  db.sqlite3  manage.py  pyproject.toml
homepage/: admin.py  models.py  views.py
homepage/migrations/: 0001_initial.py
mpttdropbox/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  index.html
